--- a/admin/src/app/front/details/style.css
+++ b/admin/src/app/front/details/style.css
@@ -1,6 +1,6 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
 }
 h1 {
   font-size: 1.5rem;
@@ -43,7 +43,7 @@ h3 {
 
 main {
   max-width: 450px;
-  margin: auto;
+  margin: 0.5rem auto;
   padding: 2rem 1rem 3rem;
   border: solid 1px darkgray;
 }
@@ -68,14 +68,18 @@ button {
 
 button:hover {
   background-color: #11a29d;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  box-shadow:
+    0 4px 6px -1px rgb(0 0 0 / 0.1),
+    0 2px 4px -2px rgb(0 0 0 / 0.1);
 }
 button:active {
   background-color: #12aba6;
 }
 
 .card {
-  box-shadow: 0 0 15px -3px rgb(0 0 0 / 0.1), 0 0 6px -4px rgb(0 0 0 / 0.1);
+  box-shadow:
+    0 0 15px -3px rgb(0 0 0 / 0.1),
+    0 0 6px -4px rgb(0 0 0 / 0.1);
   margin: 1rem 0;
   padding: 1.5rem 1rem 1.5rem 0;
   display: flex;
