chore: micro style update

--- a/src/app/matchmaker/details/style.css
+++ b/src/app/matchmaker/details/style.css
@@ -42,7 +42,8 @@ h3 {
 }
 
 main {
-  max-width: 450px;
+  width: 450px;
+  max-width: 98%;
   margin: 0.5rem auto;
   padding: 2rem 1rem 3rem;
   border: solid 1px darkgray;
